# localyze

./: .gitignore  AGENT_HANDOFF.md  AUDIO_FIX_SUMMARY.md  AUDIT_REPORT_2026_05_07.md  BLOCKERS.md  BUILD.md  CHANGELOG.md  CHATBOT_DOMAIN_TEST_PLAN.md  CHATBOT_TEST_PLAN.md  CHATBOT_TEST_RESULTS.md  CLARIFICATION_DESIGN.md  COMPLETION_REPORT.md  DATA_SAFETY.md  EVAL30_FINAL_REPORT.md  EVAL50_REPORT.md  FAIL48_RESPONSES.md  FIXES_SUMMARY.md  Localyze.md  MIGRATION_SUMMARY.md  PLAY_DATA_SAFETY.md  PLAY_UPLOAD_CHECKLIST.md  PRIVACY_POLICY.md  PRODUCTION_AUDIT_REPORT.md  PROGRESS.md  QA_REGRESSION_CHECKLIST.md  QUALITY_DIAGNOSIS_2026_05_08.md  QUESTION_REGISTER.md  README.md  SCORECARD_2026_05_08.md  SETUP_LOG.md  TESTING_MATRIX.md  TEST_REPORT.md  agent.md  ask_model.py  ask_questions.sh  build.gradle.kts  check_response.py  clarify15_results.json  collect_judge.py  compare15_bank.json  (+182 more)
.claude/: settings.local.json
app/: build.gradle.kts  google-services.json  proguard-rules.pro
desktop/: ARCHITECTURE.md  CLAUDE.md  README.md  RELEASE_CHECKLIST.md  STATUS.md
desktop/linux/: CMakeLists.txt  README.md
desktop/linux/packaging/: Localyze.desktop  README.md  build-appimage.sh
desktop/linux/qml/: ArtifactPanel.qml  ArtifactView.qml  ChatView.qml  ConversationDrawer.qml  FollowUpChips.qml  Main.qml  MessageBody.qml  ModePicker.qml  OnboardingView.qml  SlashMenu.qml  StylePicker.qml  TestSpectatorView.qml  Theme.qml  ThoughtCard.qml  WritingToolsPopover.qml
desktop/linux/src/: main.cpp
desktop/linux/src/artifacts/: VizParser.cpp  VizParser.h
desktop/linux/src/conversation/: ConversationStore.cpp  ConversationStore.h
desktop/linux/src/download/: ModelDownloader.cpp  ModelDownloader.h
desktop/linux/src/hardware/: HardwareProbe.cpp  HardwareProbe.h
desktop/linux/src/inference/: BackendSelector.cpp  BackendSelector.h  LlamaCppBackend.cpp  LlamaCppBackend.h  ModeStore.cpp  ModeStore.h  PromptPreFilter.cpp  PromptPreFilter.h  StyleStore.cpp  StyleStore.h  SystemPromptBuilder.cpp  SystemPromptBuilder.h
desktop/linux/src/research/: PromptFeeder.cpp  PromptFeeder.h  ReActAgent.cpp  ReActAgent.h  TestSpectator.cpp  TestSpectator.h  Tools.cpp  Tools.h
desktop/linux/src/settings/: SettingsStore.cpp  SettingsStore.h  ThemeBridge.cpp  ThemeBridge.h
desktop/linux/test/: probe_cli.cpp
eval50user_20260507_062904/: results.json
eval50user_20260507_071054/: results.json
eval50user_20260507_071602/: results.json  summary.json
eval50user_20260507_081012/: results.json  summary.json
eval50user_20260507_084227/: results.json
eval50user_20260507_093952/: results.json
eval50user_20260507_104908/: results.json
eval50user_20260508_000206/: results.json
eval50user_20260508_002830/: results.json
plans/: EVAL20_QUALITY_PLAN.md  OLLAMA_MIGRATION_DESIGN.md  WEB_SEARCH_SYNTHESIS_IMPROVEMENTS.md
playwright-scripts/: .env.example  README.md  adid-analytics2.js  adid-check.js  adid-direct.js  adid-final.js  adid-fresh.js  adid-locator.js  adid-real-click.js  adid-toggle.js  adid-yes-analytics.js  adid-yes.js  adid-yes2.js  auto-submit-v113.js  check-bundle-status.js  check-final.js  check-issue.js  check-lib.js  check-new-issue.js  check-price.js  check-prod.js  check-pub.js  check-review.js  check-state.js  check-state2.js  check-track.js  declare-adid.js  discard-then-upload.js  discover-app-ids.js  discovered-apps.json  edit-release.js  final-send-116.js  final-send.js  final-send2.js  finalize-v113.js  finalize115.js  finish-draft.js  (+48 more)
(+464 files in other folders)
